Adding Series_executor and little changes

--- a/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -150,6 +150,7 @@
     <ClInclude Include="Point.hpp" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="SA.hpp" />
+    <ClInclude Include="Series_executor.hpp" />
     <ClInclude Include="Solution.hpp" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Validator.hpp" />
