--- a/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -122,7 +122,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
     </ClCompile>
     <Link>
       <AdditionalDependencies />
@@ -154,6 +154,7 @@
     <ClInclude Include="Solution.hpp" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Validator.hpp" />
+    <ClInclude Include="XY_CLR.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="app.rc" />
