--- a/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
+++ b/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="SA.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="XY_CLR.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="app.rc">
